--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -210,44 +210,8 @@ body {
 }
 
 @media screen and (max-width: 768px) {
-    .my-information-content {
-      flex-direction: column;
-      align-items: center;
-    }
-  
-    .profile-picture img {
-      width: 150px;
-      height: 200px;
-      margin-bottom: 20px;
-    }
-  
-    .skills {
-      margin: 20px;
-      padding: 10px;
-    }
-  
-    .projects {
-      flex-direction: column;
-      align-items: center;
-    }
-  
-    .project {
-      width: 90%;
-      margin: 10px 0;
-    }
-  
-    .overlay {
-      margin-left: 0;
-      font-size: 10px;
-      padding: 10px;
-    }
-  
-    .main-image {
-      height: 250px;
-    }
-  
-    .my-information p {
-      width: 90%;
-      margin: 0 auto;
+    body {
+      font-size: 16px;
+      background-color: lightgray;
     }
   }
