--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -262,7 +262,7 @@
   
     .main-image {
       height: 250px;
-      border-radius: 0;
+      border-radius: 14px 14px 0 0;
     }
   
     .container {
