--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -401,7 +401,7 @@
   
   .slider {
     width: 100%;
-    max-width: 400px;
+    max-width: 600px;
     margin: 0 auto;
     position: relative;
     display: flex;
@@ -411,9 +411,9 @@
   
   .slider img {
     width: 100%;
-    max-width: 400px;
-    height: auto;
-    object-fit: contain;
+    max-width: 600px;
+    height: 350px;
+    object-fit: fill;
     border-radius: 10px;
     background-color: #f0f0f0;
   }
@@ -448,7 +448,6 @@
     margin-bottom: 8px;
     font-size: 18px;
   }
-  
   
   /* 모바일 반응형 */
   @media screen and (max-width: 768px) {
